fix x-axis elastic on mobile chrome

--- a/src/styles/core/global.css
+++ b/src/styles/core/global.css
@@ -9,7 +9,7 @@ body {
 }
 
 html {
-  width: 100%;
+  max-width: 100%;
 }
 
 q {
